--- a/.env
+++ b/.env
@@ -1,5 +1,10 @@
+#db
 DB_HOST=localhost
 DB_PORT=5432
 DB_USER=mark
 DB_NAME=hotels_db
 DB_PASSWORD=Mark2410
+
+#jwt
+SECRET_KEY=qwerty123
+ALGORITHM=HS256
