re-config + template for email respone

--- a/.env
+++ b/.env
@@ -10,3 +10,8 @@ SECRET_KEY=qwerty123
 ALGORITHM=HS256
 
 GH_TOKEN=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
+
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=465
+SMTP_USER=nataly6vlk@gmail.com
+SMTP_PASS=ijpd avek wzio jliy
